# OutputMatchTestingTool

./: .gitignore  .gitmodules  .travis.yml  ACKNOWLEDGMENTS.txt  BUILDING.md  Containerfile.rockylinux8  Containerfile.ubuntu2004  Containerfile.ubuntu2410  LICENSE  Makefile.am  README.md  configure.ac
.github/workflows/: c-cpp.yml  ci.yml
examples/: cat-failing_scenario-mismatch_while_matching_part_of_output.omtt  cat-failing_scenario-will_exit_with_non_zero_exit_status_and_some_output_when_some_other_input_is_given.omtt  cat-will-exit-with-zero.omtt  cat-will-output-user-given-input.omtt  cat-will-print-nothing-with-empty-input.omtt  cat-will_match_part_of_output.omtt  cat-will_print_input_and_exit_with_success.omtt  cat-will_print_input_and_exit_with_zero.omtt
headers/: ErrorCodes.hpp  License.hpp  LineEndings.hpp  Path.hpp  ProcessResults.hpp  ReadFile.hpp  RunProcess.hpp  TestData.hpp  TestExecutionSummary.hpp  ValidateExpectationsAndSutResults.hpp  Verdict.hpp
headers/exception/: FileReadException.hpp  SignalReceivedException.hpp  SutExecutionException.hpp
headers/expectation/: EmptyOutputExpectation.hpp  ExitCodeExpectation.hpp  Expectation.hpp  FailureExitExpectation.hpp  FullOutputExpectation.hpp  PartialOutputExpectation.hpp  SuccessfulExitExpectation.hpp  ValidationResult.hpp
headers/expectation/detail/: Context.hpp
headers/expectation/validation/: EmptyOutputCause.hpp  ExitCodeCause.hpp  FailureExitCause.hpp  FullOutputCause.hpp  PartialOutputCause.hpp  (+2 more)
headers/lexer/: Lexer.hpp  Token.hpp  TokenKind.hpp
headers/logger/: ConsoleLogger.hpp  Logger.hpp
headers/parser/: Parser.hpp
headers/system/: Unix.hpp
m4/: m4-ax_prog_robot.m4
src/: Makefile.am  ReadFile.cpp  RunProcess.cpp  TestExecutionSummary.cpp  ValidateExpectationsAndSutResults.cpp  main.cpp
src/expectation/: FullOutputExpectation.cpp  PartialOutputExpectation.cpp
src/lexer/: Lexer.cpp
src/lexer/detail/: to_hex_string.cpp
src/logger/: ConsoleLogger.cpp
src/system/: Unix.cpp
systemtests/: Comments.robot  EmptyInput.robot  EmptyOutputMatch.robot  EmptyOutputMatchVariables.py  ExampleTest.robot  ExecutingMultipleTests.robot  ExitCodeAndFullMatchInteractions.robot  ExitCodeMatch.robot  ExitCodes.robot  ExitWithFailureMatch.robot  ExitWithSuccessMatch.robot  FullOutputMatch.robot  FullOutputMatchLibrary.py  FullOutputMatchVariables.py  Interactions.robot  InterpreterArguments.robot  LineEndings.robot  Makefile.am  MissingExpectations.robot  NoExpectations.robot  OmttArguments.robot  OmttExitCodes.robot  OmttTermination.robot  PartialOutputMatch.robot  PartialOutputMatchVariables.py  SignalsHandling.robot  SutCrash.robot  SutErrorsLogging.robot  common.resource  requirements.txt
systemtests/apps/: Makefile.am  close_input_and_print_some_output.cpp  crash_null_ptr_dereference.cpp  false.cpp  scat.cpp  scaterr.cpp  secho.cpp  sleep3.cpp  sleep60.cpp  stdout_cr.cpp  stdout_crlf.cpp  stdout_lf.cpp
systemtests/common/: MessageMatchers.resource  OmttExitStatusMatchers.resource  StatusLineMatchers.resource  SutErrorsLoggingMatchers.resource  SutExecution.resource  TestExecutionMatchers.py  VerdictMatchers.resource  test_TestExecutionMatchers.py
systemtests/omtt/: close_input_and_print_some_output-3mb_input_not_read_and_exit_code_matches.omtt  close_input_and_print_some_output-3mb_input_not_read_and_output_matches.omtt  close_input_and_print_some_output-failing_scenario-3mb_input_not_read_and_exit_code_doesnt_match.omtt  close_input_and_print_some_output-failing_scenario-3mb_input_not_read_and_output_doesnt_match.omtt  comment-after-run-should-not-be-a-comment.omtt  comment-at-the-top-multi-line-multiple-asterisks.omtt  comment-at-the-top-multi-line.omtt  comment-at-the-top-single-line.omtt  comment-failing_scenario-inside-input.omtt  comment-failing_scenario-inside-output.omtt  comment-inside-input-output-should-not-be-a-comment.omtt  exit_with_failure.omtt  exit_with_success.omtt  interpreter-will_print_some_script_to_stdout.omtt  scat-cr_file-match_exit_code_and_full_output.omtt  scat-cr_input_lf_output-match_exit_code_and_full_output.omtt  scat-crlf_file-match_exit_code_and_full_output.omtt  scat-crlf_input_lf_output-match_exit_code_and_full_output.omtt  scat-empty_input-match_multi_word_text_in_output.omtt  scat-empty_match-failing_scenario.omtt  scat-empty_match.omtt  scat-error_scenario-expect_keyword_in_output.omtt  scat-expect_additional_empty_line_at_the_end.omtt  scat-expect_input_with_different_letter_case.omtt  scat-expect_keyword_in_input_and_output_after_space.omtt  scat-failing_scenario-exit_code_is_different_and_full_output_is_different.omtt  scat-failing_scenario-exit_code_is_different_and_full_output_match.omtt  scat-failing_scenario-expected_output_is_shorten_than_output.omtt  scat-failing_scenario-match_exit_code_and_full_output_and_incorrect_partial_output.omtt  scat-failing_scenario-more-than_one_full_output_match_statement.omtt  scat-failing_scenario-output_is_different_at_fifth_byte.omtt  scat-failing_scenario-output_is_different_at_first_byte.omtt  scat-failing_scenario-output_is_shorten_than_expected_output.omtt  scat-failing_scenario-partial_match-more_than_one_text_expectation_failed.omtt  scat-failing_scenario-special_characters_at_input.omtt  scat-failing_scenario_when_will_expect_text_on_empty_output.omtt  scat-keywords_in_input_and_output.omtt  scat-lf_input_cr_output-match_exit_code_and_full_output.omtt  scat-lf_input_crlf_output-match_exit_code_and_full_output.omtt  scat-match_exit_code_and_full_output.omtt  (+30 more)
unittests/: LineEndingsTests.cpp  Makefile.am  RunProcessTests.cpp  ValidateExpectationsAndSutResultsTests.cpp  example.cpp  main.cpp  test_framework.hpp
unittests/expectation/: EmptyOutputExpectationTests.cpp  ExitCodeExpectationTests.cpp  FailureExitExpectationTests.cpp  FullOutputExpectationTests.cpp  PartialOutputExpectationTests.cpp  SuccessfulExitExpectationTests.cpp
unittests/lexer/: LexerFake.hpp  LexerTests.cpp
unittests/logger/: ConsoleLoggerTests.cpp
unittests/parser/: ParserTests.cpp
unittests/system/: UnixFake.cpp  UnixFake.hpp
(+14 files in other folders)
