check_PROGRAMS = true false scat secho crash_null_ptr_dereference sleep60 close_input_and_print_some_output

true_SOURCES = true.cpp
false_SOURCES = false.cpp
scat_SOURCES = scat.cpp
secho_SOURCES = secho.cpp
crash_null_ptr_dereference_SOURCES = crash_null_ptr_dereference.cpp
sleep60_SOURCES = sleep60.cpp
close_input_and_print_some_output_SOURCES = close_input_and_print_some_output.cpp
