check_PROGRAMS = true false scat secho crash_null_ptr_dereference sleep3 close_input_and_print_some_output scaterr stdout_crlf stdout_lf stdout_cr

true_SOURCES = true.cpp
false_SOURCES = false.cpp
scat_SOURCES = scat.cpp
secho_SOURCES = secho.cpp
crash_null_ptr_dereference_SOURCES = crash_null_ptr_dereference.cpp
sleep3_SOURCES = sleep3.cpp
close_input_and_print_some_output_SOURCES = close_input_and_print_some_output.cpp
scaterr_SOURCES = scaterr.cpp
stdout_crlf_SOURCES = stdout_crlf.cpp
stdout_lf_SOURCES = stdout_lf.cpp
stdout_cr_SOURCES = stdout_cr.cpp
